--- a/res/layout-v21/activity_upgrade_payment.xml
+++ b/res/layout-v21/activity_upgrade_payment.xml
@@ -3,14 +3,14 @@
     xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_secondary"
+    android:background="@color/white"
     android:id="@+id/scroll_view_payment" > 
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/background_secondary">
+        android:background="@color/white">
         
         <RelativeLayout 
             android:id="@+id/payment_layout"
@@ -26,7 +26,7 @@
             <RelativeLayout 
                 android:id="@+id/payment_layout_title"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="142dp"
                 android:background="@drawable/card_corner_grey"
                 android:gravity="center_vertical">
                 
@@ -38,7 +38,7 @@
                     android:textAllCaps="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="20dp"
-                    android:textSize="35sp"/>
+                    android:textSize="30sp"/>
                 
                 <RelativeLayout 
                     android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:textColor="@color/white"
-	                    android:textSize="35sp"/>
+	                    android:textSize="38sp"/>
 	                
 	                <TextView 
 	                    android:id="@+id/payment_decimal_text"
@@ -62,7 +62,7 @@
 	                    android:layout_toRightOf="@id/payment_integer_text"
 	                    android:layout_alignBottom="@id/payment_integer_text"
 	                    android:layout_marginBottom="5dp"
-	                    android:textSize="16sp" />
+	                    android:textSize="17sp" />
 	                
 	                <TextView 
 	                    android:id="@+id/payment_per_month_text"
@@ -72,7 +72,7 @@
 	                    android:layout_toRightOf="@id/payment_decimal_text"
 	                    android:layout_alignBottom="@id/payment_integer_text"
 	                    android:layout_marginBottom="5dp"
-	                    android:textSize="16sp"
+	                    android:textSize="17sp"
 	                    android:layout_marginLeft="5dp" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -80,15 +80,14 @@
             <RelativeLayout 
                 android:id="@+id/payment_layout_values_select"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/card_corner"
-                android:gravity="center_vertical"
                 android:layout_below="@id/payment_layout_title">
                 
                 <RelativeLayout 
 	                android:id="@+id/payment_layout_values"
 	                android:layout_width="match_parent"
-	                android:layout_height="100dp"
+	                android:layout_height="wrap_content"
 	                android:background="@drawable/card_corner"
 	                android:gravity="center_vertical" >
 	                
@@ -97,7 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:gravity="bottom">
+                        android:layout_marginTop="26dp">
                         
                         <TextView 
                             android:id="@+id/payment_storage_value_integer"
@@ -112,7 +111,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/upgrade_orange"
-                            android:textSize="16sp"
+                            android:textSize="17sp"
                             android:layout_toRightOf="@id/payment_storage_value_integer"
                             android:layout_alignBottom="@id/payment_storage_value_integer"
                             android:layout_marginBottom="1dp"/>
@@ -128,7 +127,7 @@
                             android:layout_toRightOf="@id/payment_storage_value_gb"
                             android:layout_alignBottom="@id/payment_storage_value_integer"
                             android:layout_marginBottom="1dp"
-                            android:textSize="16sp"/>
+                            android:textSize="17sp"/>
                         
                     </RelativeLayout>
                     
@@ -138,7 +137,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_below="@id/payment_storage_layout"
-                        android:gravity="bottom">
+                        android:layout_marginBottom="26dp">
                         
                         <TextView 
                             android:id="@+id/payment_bandwidth_value_integer"
@@ -153,7 +152,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/upgrade_orange"
-                            android:textSize="16sp"
+                            android:textSize="17sp"
                             android:layout_toRightOf="@id/payment_bandwidth_value_integer"
                             android:layout_alignBottom="@id/payment_bandwidth_value_integer"
                             android:layout_marginBottom="1dp"/>
@@ -169,30 +168,20 @@
                             android:layout_toRightOf="@id/payment_bandwith_value_tb"
                             android:layout_alignBottom="@id/payment_bandwidth_value_integer"
                             android:layout_marginBottom="1dp"
-                            android:textSize="16sp"/>
+                            android:textSize="17sp"/>
                         
                     </RelativeLayout>
                 
                 </RelativeLayout>
 			</RelativeLayout>
-        </RelativeLayout>
-        
-        <RelativeLayout 
-            android:id="@+id/payment_layout_select"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/card_corner"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:elevation="2dp">
-        		<RelativeLayout 
+			
+			<RelativeLayout 
 	                android:id="@+id/payment_layout_select_inside"
 	                android:layout_width="match_parent"
-	                android:layout_height="50dp"
+	                android:layout_height="wrap_content"
 	                android:background="@drawable/card_corner"
-	                android:gravity="center">
+	                android:gravity="center"
+	                android:layout_below="@id/payment_layout_values_select">
 	                
                     <TextView
 	                   android:id="@+id/payment_text_payment_method"
@@ -200,134 +189,152 @@
 	                   android:layout_height="wrap_content"
 	                   android:text="@string/select_payment_method"
 	                   android:textAllCaps="true"
-	                   android:textSize="16sp" 
+	                   android:textSize="20sp" 
 	                   android:textColor="@color/upgrade_red"
-	                   android:layout_centerHorizontal="true" />
+	                   android:layout_centerHorizontal="true"
+	                   android:layout_marginBottom="26dp"
+	                   android:fontFamily="sans-serif-light" />
 	                
                 </RelativeLayout>
                 
-                <LinearLayout 
-                    android:id="@+id/payment_separator"
-	                android:layout_width="match_parent"
-	                android:layout_height="1dp"
-	                android:background="@color/separator_grey"
-	                android:layout_below="@id/payment_layout_select_inside"
-	                android:orientation="vertical"/>
+				<LinearLayout 
+	                    android:id="@+id/payment_separator"
+		                android:layout_width="match_parent"
+		                android:layout_height="1dp"
+		                android:background="@color/separator_grey"
+		                android:layout_below="@id/payment_layout_select_inside"
+		                android:orientation="vertical"/>
                 
                 <RelativeLayout
 		            android:id="@+id/payment_method_google_wallet"
 		            android:layout_width="match_parent"
-		            android:layout_height="wrap_content"
+		            android:layout_height="56dp"
 		            android:background="@drawable/card_corner"
 		            android:layout_below="@id/payment_separator">
 		            
 		            <ImageView 
 		                android:id="@+id/payment_method_google_wallet_icon"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
+		                android:layout_width="40dp"
+		                android:layout_height="40dp"
 		                android:src="@drawable/google_wallet_ic"
-		                android:layout_centerVertical="true"
-		                android:layout_marginLeft="20dp"
-		                android:layout_marginTop="10dp"
-		                android:layout_marginBottom="10dp"/>
+		                android:layout_marginLeft="16dp"
+		                android:layout_marginBottom="8dp"
+		                android:layout_marginTop="8dp"/>
 		            
 		            <TextView
 		                android:id="@+id/payment_method_google_wallet_text"
 		                android:layout_width="wrap_content"
 		                android:layout_height="wrap_content"
-		                android:textSize="16sp"
-		                android:textAllCaps="true"
+		                android:textSize="17sp"
 		                android:text="@string/payment_method_google_wallet"
 		                android:layout_centerVertical="true"
 		                android:layout_toRightOf="@id/payment_method_google_wallet_icon"
-		                android:layout_marginLeft="20dp"/>
+		                android:layout_marginLeft="16dp"/>
 		        </RelativeLayout>
 	        
+                <LinearLayout 
+	                    android:id="@+id/payment_separator_1"
+		                android:layout_width="match_parent"
+		                android:layout_height="1dp"
+		                android:background="@color/separator_grey"
+		                android:layout_below="@id/payment_method_google_wallet"
+		                android:orientation="vertical"/>
+                
 	            <RelativeLayout
 		            android:id="@+id/payment_method_credit_card"
 		            android:layout_width="match_parent"
-		            android:layout_height="wrap_content"
+		            android:layout_height="56dp"
 		            android:background="@drawable/card_corner"
-		            android:layout_below="@id/payment_method_google_wallet">
+		            android:layout_below="@id/payment_separator_1">
 		            
 		            <ImageView 
 		                android:id="@+id/payment_method_credit_card_icon"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
+		                android:layout_width="40dp"
+		                android:layout_height="40dp"
 		                android:src="@drawable/cc_ic"
-		                android:layout_centerVertical="true"
-		                android:layout_marginLeft="20dp"
-		                android:layout_marginTop="10dp"
-		                android:layout_marginBottom="10dp"/>
+		                android:layout_marginLeft="16dp"
+		                android:layout_marginBottom="8dp"
+		                android:layout_marginTop="8dp"/>
 		            
 		            <TextView
 		                android:id="@+id/payment_method_credit_card_text"
 		                android:layout_width="wrap_content"
 		                android:layout_height="wrap_content"
-		                android:textSize="16sp"
-		                android:textAllCaps="true"
+		                android:textSize="17sp"
 		                android:text="@string/payment_method_credit_card"
 		                android:layout_centerVertical="true"
 		                android:layout_toRightOf="@id/payment_method_credit_card_icon"
-		                android:layout_marginLeft="20dp"/>
+		                android:layout_marginLeft="16dp"/>
 		        </RelativeLayout>
+		        
+	            <LinearLayout 
+	                    android:id="@+id/payment_separator_2"
+		                android:layout_width="match_parent"
+		                android:layout_height="1dp"
+		                android:background="@color/separator_grey"
+		                android:layout_below="@id/payment_method_credit_card"
+		                android:orientation="vertical"/>
                 
                 <RelativeLayout
 		            android:id="@+id/payment_method_fortumo"
 		            android:layout_width="match_parent"
-		            android:layout_height="wrap_content"
+		            android:layout_height="56dp"
 		            android:background="@drawable/card_corner"
-		            android:layout_below="@id/payment_method_credit_card">
+		            android:layout_below="@id/payment_separator_2">
 		            
 		            <ImageView 
 		                android:id="@+id/payment_method_fortumo_icon"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
+		                android:layout_width="40dp"
+		                android:layout_height="40dp"
 		                android:src="@drawable/fortumo_ic"
-		                android:layout_centerVertical="true"
-		                android:layout_marginLeft="20dp"
-		                android:layout_marginTop="10dp"
-		                android:layout_marginBottom="10dp"/>
+		                android:layout_marginLeft="16dp"
+		                android:layout_marginBottom="8dp"
+		                android:layout_marginTop="8dp"/>
 		            
 		            <TextView
 		                android:id="@+id/payment_method_fortumo_text"
 		                android:layout_width="wrap_content"
 		                android:layout_height="wrap_content"
-		                android:textSize="16sp"
-		                android:textAllCaps="true"
+		                android:textSize="17sp"
 		                android:text="@string/payment_method_fortumo"
 		                android:layout_centerVertical="true"
 		                android:layout_toRightOf="@id/payment_method_fortumo_icon"
-		                android:layout_marginLeft="20dp"/>
+		                android:layout_marginLeft="16dp"/>
         	</RelativeLayout>
+        	
+            <LinearLayout 
+                    android:id="@+id/payment_separator_3"
+	                android:layout_width="match_parent"
+	                android:layout_height="1dp"
+	                android:background="@color/separator_grey"
+	                android:layout_below="@id/payment_method_fortumo"
+	                android:orientation="vertical"/>
         	
             <RelativeLayout
 	            android:id="@+id/payment_method_centili"
 	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
+	            android:layout_height="56dp"
 	            android:background="@drawable/card_corner"
-	            android:layout_below="@id/payment_method_fortumo">
+	            android:layout_below="@id/payment_separator_3">
 	            
 	            <ImageView 
 	                android:id="@+id/payment_method_centili_icon"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
+	                android:layout_width="40dp"
+	                android:layout_height="40dp"
 	                android:src="@drawable/centili_ic"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="20dp"
-	                android:layout_marginTop="10dp"
-	                android:layout_marginBottom="10dp"/>
+	                android:layout_marginLeft="16dp"
+		            android:layout_marginBottom="8dp"
+		            android:layout_marginTop="8dp"/>
 	            
 	            <TextView
 	                android:id="@+id/payment_method_centili_text"
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:textSize="16sp"
-	                android:textAllCaps="true"
+	                android:textSize="17sp"
 	                android:text="@string/payment_method_centili"
 	                android:layout_centerVertical="true"
 	                android:layout_toRightOf="@id/payment_method_centili_icon"
-	                android:layout_marginLeft="20dp"/>
+	                android:layout_marginLeft="16dp"/>
 	        </RelativeLayout>
                 
         </RelativeLayout>
