--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="button_text">#ffffff</color>
     <color name="text_tab_alpha">#b3ffffff</color>
     <color name="text_secondary">#7a7a7a</color>
-    <color name="separator_grey">#c0c0c0</color>
+    <color name="separator_grey">#10000000</color>
     <color name="background">#ffffff</color>
     <color name="background_secondary">#eeeeee</color>
     <color name="mega">#d90007</color>
