--- a/res/layout-v21/item_offline_list.xml
+++ b/res/layout-v21/item_offline_list.xml
@@ -1,37 +1,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/offline_list_item_layout" >
     
     <ImageView
         android:id="@+id/offline_list_thumbnail"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="5dp" 
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="12dp" 
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/offline_list_checkbox" />
+        android:layout_centerVertical="true"/>
     
     <TextView
         android:id="@+id/offline_list_filename"
         android:layout_width="225dp"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/offline_list_thumbnail"
-        android:paddingLeft="3dp"
-        android:paddingTop="7dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="8dp"
         android:textColor="@color/file_list_first_row"
-        android:singleLine="false" />
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1" />
     
     <TextView
         android:id="@+id/offline_list_filesize"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/offline_list_thumbnail"
         android:layout_below="@+id/offline_list_filename"
-        android:paddingLeft="3dp"
-        android:paddingBottom="7dp"
+        android:layout_marginLeft="8dp"
         android:textColor="@color/file_list_second_row" 
-        android:textSize="12sp"/>
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"/>   
     
     <ImageButton 
         android:id="@+id/offline_list_three_dots"
