Tasks #4086, #4087, #4088: - New dimensions for the items of the list in File Explorer Activity - New dimensions for the items of the list in File Storage Activity - New dimensions for the items of the list in Contacts Section

--- a/res/layout-v21/activity_filestorage.xml
+++ b/res/layout-v21/activity_filestorage.xml
@@ -33,7 +33,7 @@
     <LinearLayout
         android:id="@+id/options_file_storage_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:gravity="right"
         android:background="@color/white"
