--- a/res/layout-v21/item_contact_list.xml
+++ b/res/layout-v21/item_contact_list.xml
@@ -2,22 +2,22 @@
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/contact_list_item_layout"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants" >
 
     <RelativeLayout
         android:id="@+id/contact_list_relative_layout_avatar"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@id/contact_list_checkbox"
-        android:paddingTop="3dp" >
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="18dp"
+        android:layout_centerVertical="true">
 
         <mega.privacy.android.app.components.RoundedImageView
             android:id="@+id/contact_list_thumbnail"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
             rounded:border_color="@color/border_file_properties"
             rounded:border_width="0dp"
             rounded:corner_radius="27dp" />
@@ -33,20 +33,25 @@
     <TextView
         android:id="@+id/contact_list_name"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_first_row" />
-
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row" 
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"/>
+   
     <TextView
         android:id="@+id/contact_list_content"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/contact_list_name"
         android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
-        android:paddingBottom="7dp"
-        android:paddingLeft="5dp"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
 
     <ImageButton
