--- a/res/layout-v21/activity_create_account.xml
+++ b/res/layout-v21/activity_create_account.xml
@@ -166,7 +166,7 @@
 
             <ProgressBar
                 android:id="@+id/create_account_progress_bar"
-                style="?android:attr/progressBarStyleLargeInverse"
+                style="@style/UsedSpaceProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
