--- a/res/layout-v21/item_file_list.xml
+++ b/res/layout-v21/item_file_list.xml
@@ -100,10 +100,10 @@
      <ProgressBar
 	    android:id="@+id/transfers_list__browser_bar"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" 
-		style="@style/MEGAProgressBarTransfers"  
-		android:layout_margin="5dip"
-		android:paddingRight="5dp" 
+		android:layout_height="wrap_content"  
+        android:layout_marginLeft="13dp" 
+        android:layout_marginTop="6dp"
+        style="@style/UsedSpaceProgressBar"
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:layout_toLeftOf="@id/file_list_three_dots"
         android:layout_below="@id/file_list_filename" />    
