--- a/res/layout-v21/item_transfers_list.xml
+++ b/res/layout-v21/item_transfers_list.xml
@@ -1,19 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
-    android:id="@+id/transfers_list_item_layout" >
-    
+    android:id="@+id/transfers_list_item_layout" >    
     
     <ImageView
         android:id="@+id/transfers_list_thumbnail"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" 
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/transfers_list_checkbox"  />
+        android:layout_centerVertical="true"/>
     
     <ImageView
         android:id="@+id/transfers_list_small_icon"
@@ -26,38 +22,31 @@
     <TextView
         android:id="@+id/transfers_list_filename"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/transfers_list_thumbnail"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp" />
-    
-    <ImageView 
-        android:id="@+id/transfers_list_one_dot"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:src="@drawable/dot"
-        android:layout_toRightOf="@id/transfers_list_filename"
-        android:paddingTop="7dp"
-        android:paddingLeft="5dp" />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row"
+        android:ellipsize="end"
+        android:textSize="16sp"
+        android:maxLines="1"/>
     
     <TextView
         android:id="@+id/transfers_list_transfer_rate"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_alignTop="@id/transfers_list_one_dot"
-        android:layout_toRightOf="@id/transfers_list_one_dot"
-        android:paddingLeft="5dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_second_row" />
+        android:layout_height="wrap_content"
+		android:layout_alignRight="@id/transfers_list_bar"
+        android:textColor="@color/file_list_second_row"
+        android:layout_marginTop="17dp" />
     
     <ImageView
         android:id="@+id/transfers_list_completed_image"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
+        android:layout_marginBottom="14dp" 
         android:layout_toRightOf="@id/transfers_list_thumbnail"
         android:layout_below="@id/transfers_list_filename"
-        android:paddingBottom="7dp"
-        android:paddingLeft="5dp" />
+        android:layout_alignLeft="@id/transfers_list_filename" />
     
     <TextView
         android:id="@+id/transfers_list_completed_text"
@@ -65,18 +54,19 @@
         android:layout_height="25dp"
         android:layout_toRightOf="@id/transfers_list_completed_image"
         android:layout_below="@+id/transfers_list_filename"
-        android:paddingLeft="5dp"
-        android:paddingBottom="7dp"
-        android:textColor="@color/file_list_second_row" />
+        android:textColor="@color/file_list_second_row"
+        android:layout_marginLeft="5dp"/>
          
     <ProgressBar
 	    android:id="@+id/transfers_list_bar"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" 
-		style="@style/MEGAProgressBarTransfers"  
-		android:layout_margin="5dip" 
+		style="@style/UsedSpaceProgressBar"  
+        android:layout_marginLeft="13dp" 
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="6dp" 
 		android:layout_below="@id/transfers_list_filename"
-		android:paddingRight="5dp"
+		android:layout_toLeftOf="@id/transfers_list_option_remove"
         android:layout_toRightOf="@id/transfers_list_thumbnail" />
     
     <ImageButton 
