--- a/res/layout-v21/fragment_offlinegrid.xml
+++ b/res/layout-v21/fragment_offlinegrid.xml
@@ -60,7 +60,8 @@
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
         sothree:umanoParalaxOffset="100dp"
-        sothree:umanoShadowHeight="4dp" >
+        sothree:umanoShadowHeight="4dp"
+        android:elevation="16dp" >
 
         <!-- MAIN CONTENT -->
 
