--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,8 +12,11 @@
     <dimen name="fab_button_diameter">56dp</dimen>
     <dimen name="fab_button_margin_bottom">16dp</dimen>
     <dimen name="fab_button_margin_right">16dp</dimen>
-    <dimen name="elevation_low">1dp</dimen>
-    <dimen name="elevation_high">8dp</dimen>
+    <dimen name="elevation_low">6dp</dimen>
+    <dimen name="elevation_high">12dp</dimen>
+    
+    <dimen name="elevation_upgrade_low">2dp</dimen>
+    <dimen name="elevation_upgrade_high">8dp</dimen>
     
     <dimen name="status_bar_height">24dp</dimen>
     <dimen name="left_margin_back_arrow">16dp</dimen>
