--- a/res/layout-v21/fragment_rubbishbingrid.xml
+++ b/res/layout-v21/fragment_rubbishbingrid.xml
@@ -77,7 +77,8 @@
         sothree:umanoShadowHeight="4dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoDragView="@+id/dragView"
-        sothree:umanoOverlay="true">
+        sothree:umanoOverlay="true"
+        android:elevation="16dp">
 
    <!-- MAIN CONTENT -->
         
