Bug #4096 and bug #4094: - Change transparency of the public link icon - Margins of the layout containing the content of each section are not correct

--- a/res/layout-v21/fragment_rubbishbinlist.xml
+++ b/res/layout-v21/fragment_rubbishbinlist.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/rubbishbin_content_text_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:background="@color/content_text_background">
 
         <TextView
@@ -16,7 +16,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"            
             android:textColor="@color/text_secondary"
-            android:textSize="14sp" />
+            android:layout_centerVertical="true"
+            android:textSize="14sp"/>
         
        <ProgressBar
 		    android:id="@+id/rubbishbin_list_download_progress_bar"
