--- a/res/layout-v21/fragment_offlinegrid.xml
+++ b/res/layout-v21/fragment_offlinegrid.xml
@@ -8,13 +8,14 @@
   	<RelativeLayout
         android:id="@+id/offline_content_grid_text_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:background="@color/content_text_background">
 
         <TextView
             android:id="@+id/offline_content_text_grid"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"            
+            android:layout_height="wrap_content"  
+            android:layout_centerVertical="true"          
             android:textColor="@color/text_secondary"
             android:textSize="14sp" />
     </RelativeLayout>
