--- a/res/layout-v21/item_contact_list.xml
+++ b/res/layout-v21/item_contact_list.xml
@@ -26,8 +26,8 @@
             android:id="@+id/contact_list_initial_letter"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_centerInParent="true"
-            android:gravity="center_horizontal|center_vertical" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-5dp" />
     </RelativeLayout>
 
     <TextView
