--- a/res/layout-v21/activity_folder_link.xml
+++ b/res/layout-v21/activity_folder_link.xml
@@ -134,6 +134,34 @@
 
             
             <LinearLayout
+                android:id="@+id/folder_link_list_option_download_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/folder_link_list_option_download"
+                    style="@style/dialogActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:src="@drawable/ic_download" />
+
+                <TextView
+                    android:id="@+id/folder_link_list_option_download_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:text="@string/general_download"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            
+            <LinearLayout
                 android:id="@+id/folder_link_list_option_import_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -162,28 +190,29 @@
             </LinearLayout>
             
             <LinearLayout
-                android:id="@+id/folder_link_list_option_download_layout"
+                android:id="@+id/folder_link_list_option_extra_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:visibility="invisible" >
 
                 <ImageView
-                    android:id="@+id/folder_link_list_option_download"
+                    android:id="@+id/folder_link_list_option_extra"
                     style="@style/dialogActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_download" />
+                    android:src="@drawable/info_ic" />
 
                 <TextView
-                    android:id="@+id/folder_link_list_option_download_text"
+                    android:id="@+id/folder_link_list_option_extra_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/general_import"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:text="@string/general_download"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold" />
