--- a/res/layout/item_transfers_list.xml
+++ b/res/layout/item_transfers_list.xml
@@ -36,7 +36,8 @@
         android:layout_height="30dp"
         android:layout_toRightOf="@id/transfers_list_thumbnail"
         android:paddingLeft="5dp"
-        android:paddingTop="7dp" />
+        android:paddingTop="7dp"
+        android:textColor="@color/file_list_first_row" />
     
     <ImageView 
         android:id="@+id/transfers_list_one_dot"
