--- a/res/layout-v21/fragment_clouddriveprovider.xml
+++ b/res/layout-v21/fragment_clouddriveprovider.xml
@@ -33,12 +33,39 @@
         android:layout_marginTop="@dimen/standard_margin"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
+    
+   <LinearLayout
+         android:id="@+id/options_provider_layout"
+         android:layout_width="fill_parent"
+         android:layout_height="48dp"
+         android:gravity="right|center_vertical"
+         android:layout_alignParentBottom="true"
+         android:orientation="horizontal" >
+
+         <TextView
+             android:id="@+id/cancel_text"
+             android:fontFamily="sans-serif-medium"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:textColor="@color/accentColor"
+             android:gravity="center_vertical|center_horizontal"
+             android:textSize="14sp"/>
+     </LinearLayout>
+     
+    <View 
+     android:id="@+id/separator" 
+	 android:background="@color/separator_grey"
+	 android:layout_width = "fill_parent"
+	 android:layout_height="1dip"
+	 android:layout_above="@id/options_provider_layout"/>   
+    
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/provider_list_view_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/provider_content_text"
+        android:layout_above="@id/separator"
         android:choiceMode="multipleChoice" />
 
 </RelativeLayout>
