Fix naming of `ParallaxOffset`
The udpated version of ParallaxOffset has fixed a typo: `paralaxOffset`
by `parallaxOffset`

--- a/app/src/main/res/layout-v21/activity_file_contact_list.xml
+++ b/app/src/main/res/layout-v21/activity_file_contact_list.xml
@@ -91,7 +91,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
-        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoParallaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" 
         android:elevation="16dp">
 
