--- a/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
@@ -114,7 +114,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
-        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoParallaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" 
         android:elevation="16dp" >
 
@@ -514,7 +514,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
-        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoParallaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" 
         android:elevation="16dp">
 
