--- a/app/src/main/res/layout-v21/fragment_filebrowserlist.xml
+++ b/app/src/main/res/layout-v21/fragment_filebrowserlist.xml
@@ -113,7 +113,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
-        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoParallaxOffset="100dp"
         sothree:umanoShadowHeight="4dp" >
 
         <!-- MAIN CONTENT -->
@@ -513,7 +513,7 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="120dp"
-        sothree:umanoParalaxOffset="100dp"
+        sothree:umanoParallaxOffset="100dp"
         sothree:umanoShadowHeight="4dp"
         android:elevation="16dp" >
 
