Bug #4200 - Pin Lock display issue on Android 4.

--- a/res/layout/activity_pin_lock.xml
+++ b/res/layout/activity_pin_lock.xml
@@ -23,6 +23,7 @@
                 style="@style/InputField"
                 android:hint="@string/settings_pin_lock_code"
                 android:imeOptions="actionDone"
+                android:textColor="@color/black"
                 android:inputType="numberPassword" >
             </EditText>
 
