--- a/res/layout-v21/item_shared_folder.xml
+++ b/res/layout-v21/item_shared_folder.xml
@@ -1,69 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/shared_folder_item_layout">
          
     <RelativeLayout
 		android:id="@+id/shared_folder_contact_relative_layout_avatar"
-		android:layout_width="54dp"
-		android:layout_height="54dp"
-		android:layout_marginLeft="5dp" 
-		android:paddingTop="3dp"
-		android:layout_toRightOf="@id/shared_folder_contact_checkbox">
-		
-	    <mega.privacy.android.app.components.RoundedImageView 
-	         android:id="@+id/shared_folder_contact_thumbnail"
-	         android:layout_width="54dp"
-	         android:layout_height="54dp"
-	         android:scaleType="fitCenter"
-	         rounded:corner_radius="27dp" 
-	         rounded:border_width="0dp"
-	         rounded:border_color="@color/border_file_properties"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="18dp"
+        android:layout_centerVertical="true">
+    
+	    <mega.privacy.android.app.components.RoundedImageView
+            android:id="@+id/shared_folder_contact_thumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"
+            rounded:border_color="@color/border_file_properties"
+            rounded:border_width="0dp"
+            rounded:corner_radius="27dp" />
 	    
 	    <TextView
 	        android:id="@+id/shared_folder_contact_initial_letter"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_centerInParent="true"
-		    android:gravity="center_horizontal|center_vertical" />
-    
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-5dp" />
     </RelativeLayout>
     
     <TextView
         android:id="@+id/shared_folder_contact_name"
-        android:layout_width="225dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
-        android:paddingLeft="3dp"
-        android:paddingTop="7dp"
-        android:textColor="@color/file_list_first_row"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="13dp"
+        android:textColor="@color/file_list_first_row" 
         android:ellipsize="end"
-        android:maxLines="2"/>    
+        android:textSize="16sp"
+        android:maxLines="1"/>    
     
     <TextView
         android:id="@+id/shared_folder_contact_permissions"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/shared_folder_contact_name"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
-        android:layout_below="@+id/shared_folder_contact_name"
-        android:paddingLeft="3dp"
-        android:paddingBottom="7dp"
-        android:textColor="@color/file_list_second_row" 
-        android:textSize="12sp"
+        android:layout_marginLeft="13dp"
+        android:textSize="14sp"
         android:ellipsize="end"
-        android:maxLines="1"/>
+        android:maxLines="1"
+        android:textColor="@color/file_list_second_row" />
     
     <ImageButton 
         android:id="@+id/shared_folder_contact_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_dots_vertical_grey"
-		android:background="@null" 
-		android:paddingLeft="10dp"
         android:layout_alignParentRight="true"
-		android:layout_centerVertical="true" />
+        android:background="@null"
+        android:paddingLeft="10dp"
+		android:layout_centerVertical="true"
+        android:src="@drawable/ic_dots_vertical_grey" />
 
 </RelativeLayout>
 
